@@ -1,6 +1,4 @@
-#ifdef HAVE_CONFIG_H
 #include "config.h"
-#endif
 #include "Platform.h"
 #include "ChromeClientGdk.h"
 #include "ContextMenuClientGdk.h"
