@@ -1,3 +1,9 @@
+2007-05-09  Holger Freyther <zecke@selfish.org>
+
+        Reviewed by Mark Rowe.
+
+        * GdkLauncher/main.cpp: Always include config.h.
+
 2007-05-08  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Darin Adler.
